<resources>
    <string name="app_name">StudentTowerDefense</string>
    <string name="settings">Settings</string>
    <string name="high_scores">High Scores</string>
    <string name="play">Play</string>
    <string name="rules">Rules</string>
    <string name="back">Back</string>
    <string name="main_menu_image">Main Menu image</string>
    <string name="sound">Sound</string>
    <string name="difficulty">Difficulty</string>
    <string name="easy">Easy</string>
    <string name="normal">Normal</string>
    <string name="hard">Hard</string>
    <string name="game_speed">Game Speed</string>
    <string name="x1">x1</string>
    <string name="x2">x2</string>
    <string name="x3">x3</string>
    <string name="cancel">Cancel</string>
    <string name="apply">Apply</string>
    <string name="name">Name</string>
    <string name="score">Score</string>
    <string name="confrim">Confrim</string>
    <string name="level_1">Level 1</string>
    <string name="level_2">Level 2</string>
    <string name="level_3">Level 3</string>
    <string name="lvl_1_image">lvl 1 image</string>
    <string name="lvl_2_image">lvl 2 image</string>
    <string name="lvl_3_image">lvl 3 image</string>
    <string name="Map_Selection">Map Selection</string>
    <string name="Student_Tower_Defense">Student Tower Defense</string>
</resources>
